[gd_scene load_steps=3 format=3 uid="uid://cumaj3uho5mg1"]

[ext_resource type="Script" uid="uid://boenegpk367xj" path="res://eye_menu.gd" id="1_fyqef"]

[sub_resource type="ButtonGroup" id="ButtonGroup_xb563"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fyqef")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.49803922)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="EyeGazeInteractionButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_xb563")
text = "Eye Gaze Interaction"

[node name="AndroidEyeTrackingButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_group = SubResource("ButtonGroup_xb563")
text = "Android XR Eye Tracking"

[node name="InfoLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/HBoxContainer/EyeGazeInteractionButton" to="." method="_on_eye_gaze_interaction_button_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/HBoxContainer/AndroidEyeTrackingButton" to="." method="_on_android_eye_tracking_button_pressed"]
